--- a/Healthcare/MedicalTranscription/4_ModelImplementation/DataEngineering/Untitled.ipynb
+++ b/Healthcare/MedicalTranscription/4_ModelImplementation/DataEngineering/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "trying-motion",
+   "id": "anticipated-furniture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stupid-pepper",
+   "id": "informational-ontario",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "second-longer",
+   "id": "photographic-treat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,13 +58,14 @@
     "import numpy as np\n",
     "from deepspeech import Model \n",
     "import numpy as np\n",
-    "import wave\n"
+    "import wave\n",
+    "import git"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "heavy-soundtrack",
+   "id": "useful-wrestling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,19 +109,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sustained-attraction",
+   "id": "leading-camel",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import git\n",
-    "def clone_repo(): \n",
-    "    git.Git(\"/your/directory/to/clone\").clone(\"git://gitorious.org/git-python/mainline.git\")"
+    "def Clone_CliNER():\n",
+    "    git.Git(\"DeepsphereProjects/Healthcare/MedicalTranscription/4_ModelImplementation\").clone(\"https://github.com/text-machine-lab/CliNER.git\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "filled-auction",
+   "id": "trained-dinner",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "moral-slave",
+   "id": "medical-sherman",
    "metadata": {},
    "outputs": [],
    "source": []
