--- a/Healthcare/MedicalTranscription/4_ModelImplementation/DataEngineering/medicaltranscription.ipynb
+++ b/Healthcare/MedicalTranscription/4_ModelImplementation/DataEngineering/medicaltranscription.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "biblical-selling",
+   "id": "lyric-evidence",
    "metadata": {},
    "source": [
     "/*************************************************************************************************************************\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "universal-console",
+   "id": "recorded-flesh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conservative-blast",
+   "id": "closed-block",
    "metadata": {},
    "source": [
     "# Step 1: .INI File Configuration"
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "married-orleans",
+   "id": "prospective-graduate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "southeast-copper",
+   "id": "standard-floor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alleged-judges",
+   "id": "limited-closer",
    "metadata": {},
    "source": [
     "# Step 2: Importing the Required Libraries"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "verified-decimal",
+   "id": "enormous-front",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rocky-ending",
+   "id": "civil-artist",
    "metadata": {},
    "source": [
     "# Step 3: Importing DeepSpeech model for convert audio to text"
@@ -126,12 +126,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "legitimate-croatia",
+   "id": "foreign-blood",
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():  \n",
     "    Voice_to_text()\n",
+    "    Clone_CliNER()\n",
+    "    Predict_symptoms()\n",
     "    Text_Classification_and_Visualization()\n",
     "    \n",
     "def Voice_to_text():\n",
@@ -168,8 +170,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "respected-attraction",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Clone_CliNER():\n",
+    "    git.Git(\"DeepsphereProjects/Healthcare/MedicalTranscription/4_ModelImplementation\").clone(\"https://github.com/text-machine-lab/CliNER.git\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "possible-gauge",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Predict_symptoms():\n",
+    "    %cd CliNER/\n",
+    "    !python cliner predict --txt DeepsphereProjects/Healthcare/MedicalTranscription/4_ModelImplementation/CliNER/data/examples/hospital111.txt --out data/predictions --model models/silver.crf --format i2b2"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "considerable-boxing",
+   "id": "pediatric-healing",
    "metadata": {},
    "source": [
     "# Step 4: Text classification and visualization"
@@ -178,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "french-edinburgh",
+   "id": "civilian-provision",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opposed-philosophy",
+   "id": "light-belgium",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -242,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modern-liabilities",
+   "id": "wrapped-jungle",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -250,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adequate-arlington",
+   "id": "electric-salvation",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -258,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "casual-classics",
+   "id": "fifteen-syracuse",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -266,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cellular-timeline",
+   "id": "likely-whole",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -274,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "average-chamber",
+   "id": "talented-connectivity",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -282,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fifty-poison",
+   "id": "social-stage",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -290,9 +315,9 @@
  ],
  "metadata": {
   "environment": {
-   "name": "common-cpu.mnightly-2021-01-20-debian-10-test",
+   "name": "common-cpu.mnightly-2021-02-02-debian-10-test",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/base-cpu:mnightly-2021-01-20-debian-10-test"
+   "uri": "gcr.io/deeplearning-platform-release/base-cpu:mnightly-2021-02-02-debian-10-test"
   },
   "kernelspec": {
    "display_name": "Python 3",
