--- a/Healthcare/VoiceToTextClassification/4_ModelImplementation_SourceCode/Src_Symptoms/medicaltranscription.ipynb
+++ b/Healthcare/VoiceToTextClassification/4_ModelImplementation_SourceCode/Src_Symptoms/medicaltranscription.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "assisted-timer",
+   "id": "polyphonic-basics",
    "metadata": {},
    "source": [
     "/*************************************************************************************************************************\n",
@@ -19,18 +19,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outer-earthquake",
+   "id": "thrown-document",
    "metadata": {},
    "source": [
-    "# Step 0: downloading data from storage bucket"
+    "# Step 0: Downloading Deepspeech Pretrained Model to Convert Voice to Text "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "absolute-damages",
+   "execution_count": 1,
+   "id": "residential-dylan",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive:  deepspeech_file.zip\n",
+      "   creating: deepspeech file/\n",
+      "  inflating: deepspeech file/deepspeech-0.8.2-models.pbmm  \n",
+      "  inflating: deepspeech file/deepspeech-0.8.2-models.scorer  \n"
+     ]
+    }
+   ],
    "source": [
     "from google.cloud import storage\n",
     "\n",
@@ -48,16 +59,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "raised-decade",
+   "id": "modular-clock",
    "metadata": {},
    "source": [
-    "# Step 1: .YAML File Configuration"
+    "# Step 1: Set up .YAML Configuration File"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "impaired-produce",
+   "execution_count": 9,
+   "id": "driving-webcam",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,38 +80,37 @@
     "\n",
     "import os\n",
     "\n",
-    "vAR_yaml_file_path = '/home/jupyter/MT/Healthcare/MedicalTranscription/4_ModelImplementation/config.yaml'\n",
+    "vAR_yaml_file_path = '/home/jupyter/DeepsphereProjects/Healthcare/VoiceToTextClassification/4_ModelImplementation_SourceCode/config.yaml'\n",
     "    \n",
     "with open (vAR_yaml_file_path) as vAR_file:\n",
+    "    \n",
     "    \n",
     "           config = yaml.safe_load(vAR_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "sublime-entrance",
+   "execution_count": 10,
+   "id": "expanded-journey",
    "metadata": {},
    "outputs": [],
    "source": [
     "vAR_Text_Path=config.get(\"text_file\")\n",
-    "vAR_Model_Path=config.get(\"model_file_path\")\n",
-    "vAR_LM_Path=config.get(\"lm_file_path\")\n",
     "vAR_Symptom_Path=config.get(\"symptoms_path\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "raised-telling",
+   "id": "equivalent-garage",
    "metadata": {},
    "source": [
-    "# Step 2: Importing the Required Libraries"
+    "# Step 2: Importing the Required Run Time Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "nominated-arrangement",
+   "execution_count": 11,
+   "id": "pressed-google",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "judicial-strike",
+   "id": "hired-skiing",
    "metadata": {},
    "source": [
     "# Step 3: Importing DeepSpeech model for convert audio to text"
@@ -134,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cooked-sunrise",
+   "execution_count": 12,
+   "id": "considered-graphics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,14 +160,14 @@
     "    vAR_lm_alpha=0.93 \n",
     "    vAR_lm_beta=1.18\n",
     "\n",
-    "    model=Model(vAR_Model_Path)\n",
-    "    model.enableExternalScorer(vAR_LM_Path)\n",
+    "    model=Model(\"deepspeech file/deepspeech-0.8.2-models.pbmm\")\n",
+    "    model.enableExternalScorer(\"deepspeech file/deepspeech-0.8.2-models.scorer\")\n",
     "\n",
     "    model.setScorerAlphaBeta(vAR_lm_alpha,vAR_lm_beta)\n",
     "    model.setBeamWidth(vAR_beam_width)\n",
     "    \n",
     "# Conversion of audio data to 16khz\n",
-    "    !ffmpeg -i hospital.wav -vn -ar 16000 -ac 1 hospital1.wav\n",
+    "    !ffmpeg -i Audio_Conversation.wav -vn -ar 16000 -ac 1 hospital1.wav\n",
     "\n",
     "    def read_wav_file(filename):\n",
     "        with wave.open(filename, 'rb') as vAR_temp:       # \"rb\" mode opens the file in binary format for reading\n",
@@ -180,38 +190,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pharmaceutical-marina",
+   "id": "abstract-plumbing",
    "metadata": {},
    "source": [
-    "# Step 4: Extracting Symptoms from text file"
+    "# Step 4: Training and Extracting Symptoms from text file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "supreme-company",
+   "execution_count": 16,
+   "id": "athletic-graham",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Clone_CliNER():\n",
-    "    git.Git(\"DeepsphereProjects/Healthcare/MedicalTranscription/4_ModelImplementation\").clone(\"https://github.com/text-machine-lab/CliNER.git\")"
+    "    git.Git(\"/home/jupyter/DeepsphereProjects/Healthcare/VoiceToTextClassification/4_ModelImplementation_SourceCode\").clone(\"https://github.com/text-machine-lab/CliNER.git\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "pretty-railway",
+   "execution_count": 17,
+   "id": "original-stockholm",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Predict_symptoms():\n",
     "    %cd CliNER/\n",
-    "    !python cliner predict --txt DeepsphereProjects/Healthcare/MedicalTranscription/4_ModelImplementation/CliNER/data/examples/hospital111.txt --out data/predictions --model models/silver.crf --format i2b2"
+    "    !python cliner predict --txt /home/jupyter/DeepsphereProjects/Healthcare/VoiceToTextClassification/4_ModelImplementation_SourceCode/CliNER/data/examples/hospital111.txt --out data/predictions --model models/silver.crf --format i2b2"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "moderate-crystal",
+   "id": "egyptian-occurrence",
    "metadata": {},
    "source": [
     "# Step 5: Text classification and visualization"
@@ -220,9 +230,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "appropriate-house",
+   "id": "junior-simple",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ffmpeg version 4.3.1 Copyright (c) 2000-2020 the FFmpeg developers\n",
+      "  built with gcc 9.3.0 (crosstool-NG 1.24.0.133_b0863d8_dirty)\n",
+      "  configuration: --prefix=/opt/conda --cc=/home/conda/feedstock_root/build_artifacts/ffmpeg_1609680890771/_build_env/bin/x86_64-conda-linux-gnu-cc --disable-doc --disable-openssl --enable-avresample --enable-gnutls --enable-gpl --enable-hardcoded-tables --enable-libfreetype --enable-libopenh264 --enable-libx264 --enable-pic --enable-pthreads --enable-shared --enable-static --enable-version3 --enable-zlib --enable-libmp3lame --pkg-config=/home/conda/feedstock_root/build_artifacts/ffmpeg_1609680890771/_build_env/bin/pkg-config\n",
+      "  libavutil      56. 51.100 / 56. 51.100\n",
+      "  libavcodec     58. 91.100 / 58. 91.100\n",
+      "  libavformat    58. 45.100 / 58. 45.100\n",
+      "  libavdevice    58. 10.100 / 58. 10.100\n",
+      "  libavfilter     7. 85.100 /  7. 85.100\n",
+      "  libavresample   4.  0.  0 /  4.  0.  0\n",
+      "  libswscale      5.  7.100 /  5.  7.100\n",
+      "  libswresample   3.  7.100 /  3.  7.100\n",
+      "  libpostproc    55.  7.100 / 55.  7.100\n",
+      "\u001b[0;33mGuessed Channel Layout for Input Stream #0.0 : stereo\n",
+      "\u001b[0mInput #0, wav, from 'Audio_Conversation.wav':\n",
+      "  Metadata:\n",
+      "    encoder         : Lavf58.45.100\n",
+      "  Duration: 00:03:12.42, bitrate: 1411 kb/s\n",
+      "    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 44100 Hz, stereo, s16, 1411 kb/s\n",
+      "File 'hospital1.wav' already exists. Overwrite? [y/N] ^C\n"
+     ]
+    }
+   ],
    "source": [
     "def Text_Classification_and_Visualization():\n",
     "    with open(vAR_Text_Path,'r') as file:\n",
@@ -272,6 +308,32 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "opposite-constitutional",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "surprising-lighter",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "structured-activation",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
