--- a/Healthcare/VoiceToTextClassification/4_ModelImplementation_SourceCode/Src_Symptoms/medicaltranscription.ipynb
+++ b/Healthcare/VoiceToTextClassification/4_ModelImplementation_SourceCode/Src_Symptoms/medicaltranscription.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "meaningful-payday",
+   "id": "threaded-plate",
    "metadata": {},
    "source": [
     "/*************************************************************************************************************************\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "posted-energy",
+   "id": "lovely-brake",
    "metadata": {},
    "source": [
     "# Step 0: Downloading Deepspeech Pretrained Model to Convert Voice to Text "
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "super-teens",
+   "id": "respective-response",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "twelve-triumph",
+   "id": "fixed-johnston",
    "metadata": {},
    "source": [
     "# Step 1: Set up .YAML Configuration File"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "distinct-booth",
+   "id": "cellular-presentation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "quarterly-barrel",
+   "id": "southeast-quick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acceptable-nirvana",
+   "id": "dramatic-mouse",
    "metadata": {},
    "source": [
     "# Step 2: Importing the Required Run Time Libraries"
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "addressed-cheat",
+   "id": "christian-kelly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,16 +136,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recorded-effectiveness",
+   "id": "unusual-popularity",
    "metadata": {},
    "source": [
-    "# Step 3: Importing DeepSpeech model for convert audio to text"
+    "# Step 3: Importing DeepSpeech Model for Converting Audio to Text"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "institutional-massage",
+   "id": "established-spokesman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "noted-session",
+   "id": "amino-guess",
    "metadata": {},
    "source": [
     "# Step 4: Training and Extracting Symptoms from text file"
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "trying-isolation",
+   "id": "interesting-facing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "magnetic-syndrome",
+   "id": "confused-slovakia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,16 +221,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "raised-sunset",
+   "id": "educational-marina",
    "metadata": {},
    "source": [
-    "# Step 5: Text classification and visualization"
+    "# Step 5: Text classification and Visualization"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "informed-gibson",
+   "id": "considerable-cliff",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "million-playback",
+   "id": "loaded-graphics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "necessary-installation",
+   "id": "boxed-nicholas",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "constitutional-transcript",
+   "id": "placed-asbestos",
    "metadata": {},
    "outputs": [],
    "source": []
