--- a/AutoQuestGen/True Or False.ipynb
+++ b/AutoQuestGen/True Or False.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "printable-criterion",
+   "id": "rising-marks",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "adapted-rough",
+   "id": "disabled-stadium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "close-iceland",
+   "id": "north-orbit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,29 +35,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "classical-genetics",
+   "id": "large-marina",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import spacy\n",
+    "# downloading constituency parser model\n",
     "from allennlp.predictors.predictor import Predictor\n",
     "predictor = Predictor.from_path(\"https://s3-us-west-2.amazonaws.com/allennlp/models/elmo-constituency-parser-2018.03.14.tar.gz\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "buried-amber",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nlp = spacy.load(\"en_core_web_sm\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "proper-salvation",
+   "id": "textile-qatar",
    "metadata": {},
    "outputs": [
     {
@@ -76,6 +66,7 @@
     }
    ],
    "source": [
+    "# parsing sentence using predictor defined above\n",
     "test_sentence = \"The old woman was sitting under a tree and sipping coffee.\"\n",
     "test_sentence = test_sentence.rstrip('?:!.,;')\n",
     "print (test_sentence)\n",
@@ -86,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "healthy-poultry",
+   "id": "accepting-catalyst",
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +89,8 @@
     }
    ],
    "source": [
+    "# getting only pos tree\n",
+    "# demo link - https://demo.allennlp.org/constituency-parsing\n",
     "tree_string = parser_output[\"trees\"]\n",
     "print (tree_string)"
    ]
@@ -105,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "later-mortgage",
+   "id": "appropriate-linux",
    "metadata": {},
    "outputs": [
     {
@@ -141,6 +134,8 @@
     }
    ],
    "source": [
+    "# To view the grammatical constituencies in detailed manner\n",
+    "\n",
     "from nltk import tokenize\n",
     "from nltk.tree import Tree\n",
     "\n",
@@ -152,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "promising-script",
+   "id": "photographic-symphony",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "auburn-logic",
+   "id": "productive-filling",
    "metadata": {},
    "outputs": [
     {
@@ -259,27 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "sustainable-innocent",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "rational-failing",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !conda uninstall h5py\n",
-    "# !pip install h5py"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
-   "id": "operational-shuttle",
+   "id": "identified-component",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "animal-patch",
+   "id": "crazy-belly",
    "metadata": {},
    "outputs": [
     {
@@ -307,6 +283,8 @@
     }
    ],
    "source": [
+    "# GPT2tokenizer converts words into vector\n",
+    "\n",
     "partial_sentence = \"The old woman was sitting under a tree and\"\n",
     "input_ids = GPT2tokenizer.encode(partial_sentence,return_tensors='tf')\n",
     "print (input_ids)\n",
@@ -316,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "early-equity",
+   "id": "alien-astronomy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "presidential-background",
+   "id": "champion-password",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "competent-climate",
+   "id": "critical-blood",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -390,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suburban-eleven",
+   "id": "demographic-eleven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "valued-marker",
+   "id": "actual-uncertainty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tutorial-dietary",
+   "id": "spanish-dylan",
    "metadata": {},
    "outputs": [],
    "source": []
