Match the following version 2

--- a/AutoQuestGen/matchthefollowing_v2.ipynb
+++ b/AutoQuestGen/matchthefollowing_v2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "matchthefollowing_v2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOpxe0lmB/V9sif3MvCvCwr",
+      "authorship_tag": "ABX9TyNLDMXeAfMuDLDxaIYZnN/J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -511,7 +511,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "blW3xxbS5qzX",
-        "outputId": "4cee247e-fcc7-42be-c2b5-83619699fa89"
+        "outputId": "1f8c4fce-7fa8-4961-d676-6e99a727736e"
       },
       "source": [
         "# len(keyword_sentence_mapping)\n",
@@ -530,7 +530,7 @@
         "pprint(final_sentences)\n",
         "pprint(answers)"
       ],
-      "execution_count": 32,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,7 +581,7 @@
         "    display(Markdown(string))\n",
         "printmd('**Match column A with column B**')\n",
         "\n",
-        "for word,context in zip(answers,final_sentences):\n",
+        "for word,context in zip(answers,sent):\n",
         "  tab.add_row([word,context])\n",
         "\n",
         "print(tab)"
